--- a/profile/style.css
+++ b/profile/style.css
@@ -34,7 +34,7 @@ header {
   left: 0;
   top: 0;
   width: 100%;
-  height: 5.2vw;
+  height: 100px;
   background: #3f51b5;
   display: flex;
   justify-content: space-between;
@@ -46,7 +46,7 @@ header {
 header .header-left {
   display: flex;
   align-items: center;
-  gap: 20px;
+  justify-content: center;
 }
 header .header-left .logo {
   font-size: 4.6rem;
@@ -85,6 +85,7 @@ header .header-left .weather div {
   display: flex;
   flex-direction: column;
   text-align: center;
+  gap: 4px;
 }
 header .header-left .weather div .temp {
   font-size: 2rem;
@@ -167,19 +168,19 @@ header .toggle-btn {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 2.6vw;
-  height: 2.6vw;
-  min-width: 36px;
-  min-height: 36px;
+  width: 2.8vw;
+  height: 2.8vw;
+  min-width: 40px;
+  min-height: 40px;
   border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background: #3f51b5;
-  box-shadow: inset 5px -5px 1.5rem rgba(0, 0, 0, 0.2);
+  border: 1px solid #ddd;
   opacity: 0.9;
   color: #fff;
-  font-size: 1.6vw;
+  font-size: 1.8rem;
   cursor: pointer;
   z-index: 9999;
 }
@@ -188,8 +189,8 @@ header .toggle-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 2.6vw;
-  height: 2.6vw;
+  width: 42px;
+  height: 42px;
   background: #3f51b5;
   border-top-right-radius: 100%;
   border-bottom-right-radius: 100%;
@@ -197,7 +198,7 @@ header .toggle-btn {
   cursor: pointer;
 }
 .color-setting i {
-  font-size: 1.2vw;
+  font-size: 2.2rem;
   color: #fff;
   animation: spin 2s linear infinite;
 }
@@ -216,8 +217,6 @@ header .toggle-btn {
   align-items: center;
   justify-content: flex-start;
   width: 100%;
-  height: auto;
-  margin: 5.2vw auto 0;
 }
 
 .container {
@@ -233,17 +232,16 @@ header .toggle-btn {
 
 .section {
   width: 100%;
-  height: auto;
+  height: 100vh;
   display: flex;
   justify-content: center;
 }
 
 .section-tit {
-  font-size: 2.5vw;
+  font-size: 4.8rem;
   font-family: "Rajdhani";
   font-weight: 600;
-  width: 9.4vw;
-  height: 4vw;
+  height: 80px;
   text-align: center;
   position: relative;
 }
@@ -252,7 +250,7 @@ header .toggle-btn {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 0.2vw;
+  height: 4px;
   background: #3f51b5;
 }
 .section-tit .inner {
@@ -261,7 +259,7 @@ header .toggle-btn {
   transform: translateX(-50%);
   bottom: -2px;
   width: 50%;
-  height: 0.4vw;
+  height: 8px;
   background: #3f51b5;
 }
 
@@ -299,7 +297,7 @@ header .toggle-btn {
   border-top-left-radius: 0;
 }
 .section-inner ul li .dew img {
-  width: 2vw;
+  width: 2.8vw;
 }
 .section-inner ul li .desc {
   width: 14vw;
@@ -311,14 +309,14 @@ header .toggle-btn {
 
 .home {
   padding: 1vw 0;
-  margin-bottom: 1vw;
+  margin-top: 1vw;
 }
 .home .container {
   width: 100%;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 0;
+  padding-right: 4.8vw;
 }
 .home .container .title {
   width: 42vw;
@@ -331,7 +329,7 @@ header .toggle-btn {
   text-align: center;
 }
 .home .container .title .hiseul span {
-  font-size: 3.2vw;
+  font-size: 7rem;
   font-family: "Rajdhani";
   font-weight: 900;
   -webkit-text-stroke: 1px #222;
@@ -342,10 +340,9 @@ header .toggle-btn {
   -webkit-text-stroke: 1px transparent;
 }
 .home .container .title p {
-  width: 65%;
-  line-height: 2rem;
+  width: 68%;
   font-family: "GmarketSansMedium";
-  font-size: 1vw;
+  font-size: 2rem;
   font-weight: 500;
   letter-spacing: -1px;
   line-height: 2.4rem;
@@ -365,10 +362,10 @@ header .toggle-btn {
   border-radius: 5px;
   padding: 1vw 0;
   gap: 0.5vw;
-  width: 0.8vw;
-  height: 0.6vw;
-  min-width: 16vw;
-  min-height: 14vw;
+  width: 16vw;
+  height: 12vw;
+  min-width: 240px;
+  min-height: 180px;
   position: relative;
   perspective: 400px;
 }
@@ -411,7 +408,7 @@ header .toggle-btn {
 .home .container .title .section-inner li .card-horizontal .back p,
 .home .container .title .section-inner li .card-vertical .back p {
   font-size: 1.6rem;
-  line-height: 1.2vw;
+  line-height: 2rem;
 }
 .home .container .title .section-inner li:nth-child(2) .back {
   background: linear-gradient(to right, #38ef7d, #11998e);
@@ -439,17 +436,17 @@ header .toggle-btn {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 32vw;
-  min-width: 26vw;
-  height: 42vw;
+  width: 30vw;
+  height: 40vw;
   padding: 0.9vw;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   background: #fff;
   overflow: hidden;
   position: relative;
+  border: 4px solid #222;
 }
-.home .container .profile .mian-profile {
+.home .container .profile .main-profile {
   width: 90%;
   height: 90%;
   -o-object-fit: cover;
@@ -520,13 +517,13 @@ header .toggle-btn {
   cursor: pointer;
 }
 .skill .section-tit .ani-dew {
-  width: 50px;
-  height: 50px;
+  width: 2.6vw;
+  height: 2.6vw;
   border-radius: 100%;
   border-top-left-radius: 0;
   background: #3f51b5;
   position: absolute;
-  bottom: -70px;
+  bottom: -3.6vw;
   left: 50%;
   transform: translateX(-50%) rotate(45deg);
   animation: aniClick 0.8s alternate-reverse infinite;
@@ -554,33 +551,33 @@ header .toggle-btn {
 @keyframes aniDew {
   0% {
     transform: translateX(-50%) rotate(45deg);
-    bottom: -70px;
+    bottom: -3.6vw;
     opacity: 1;
   }
   100% {
     transform: translateX(-50%) rotate(45deg);
-    bottom: -600px;
+    bottom: -31.25vw;
     opacity: 0;
   }
 }
 .skill .section-inner ul li .skill-content {
-  margin-right: 20px;
+  margin-right: 1vw;
 }
 .skill .section-inner ul li .skill-content .skill-box {
-  width: 400px;
-  height: 60px;
-  margin-bottom: 42px;
+  width: 21vw;
+  height: 3.125vw;
+  margin-bottom: 2.2vw;
   padding: 4px 0;
   background: #3f51b5;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
+  gap: 0.8vw;
 }
 .skill .section-inner ul li .skill-content .skill-box h2 {
-  line-height: 60px;
+  line-height: 3.125vw;
   color: #fff;
-  font-size: 18px;
+  font-size: 1.8rem;
 }
 .skill .section-inner ul li .skill-content .skill-desc {
   visibility: hidden;
@@ -588,28 +585,28 @@ header .toggle-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 400px;
+  width: 21vw;
   height: 0;
-  padding: 20px;
+  padding: 1vw;
   background: #dddddd;
-  margin-top: 28px;
+  margin-top: 1.2vw;
   position: relative;
   transition: all 1s;
 }
 .skill .section-inner ul li .skill-content .skill-desc.active {
   visibility: visible;
   opacity: 1;
-  height: 150px;
+  height: 7.8vw;
 }
 .skill .section-inner ul li .skill-content .skill-desc::before {
   content: "";
-  width: 40px;
-  height: 40px;
+  width: 4.35vw;
+  height: 4.35vw;
   background: #dddddd;
   position: absolute;
-  left: 180px;
+  left: 9.375vw;
   transform: rotate(45deg);
-  top: -15px;
+  top: -0.78vw;
   z-index: -1;
 }
 .skill .section-inner ul li .skill-content .skill-desc p {
@@ -617,22 +614,25 @@ header .toggle-btn {
   align-items: center;
   font-family: "GmarketSansMedium";
   line-height: 1.5;
-  font-size: 18px;
+  font-size: 1.8rem;
 }
 .skill .section-inner ul li img {
-  width: 46px;
-  height: 46px;
+  width: 2.4vw;
+  height: 2.4vw;
 }
 .skill .section-inner ul li:nth-child(3) .jquery {
   background: #fff;
-  width: 36px;
-  height: 36px;
+  width: 1.875vw;
+  height: 1.875vw;
 }
 .skill .section-inner ul li:last-child img {
-  width: 38px;
-  height: 38px;
+  width: 2vw;
+  height: 2vw;
 }
 
+.project {
+  height: auto;
+}
 .project .section-inner {
   margin-top: 0;
   position: relative;
@@ -659,7 +659,7 @@ header .toggle-btn {
   height: 78%;
   margin: auto;
   background: #dddddd;
-  border-radius: 20px;
+  border-radius: 1vw;
   display: none;
   justify-content: center;
   align-items: center;
@@ -671,7 +671,7 @@ header .toggle-btn {
   border-style: solid;
   border-color: #3f51b5;
   height: 90%;
-  border-radius: 20px;
+  border-radius: 1vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -705,26 +705,27 @@ header .toggle-btn {
   width: 42%;
   height: 100%;
   background: #fff;
-  padding: 20px 0 0 20px;
+  padding: 1vw 0 0 1vw;
 }
 .project .section-inner .modalback .modalScreen .modalScreenInner .project-text ul {
   width: 90%;
+  min-width: 0;
   height: 100%;
   display: flex;
   gap: 2vw;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 0 20px 50px;
+  padding: 0 1vw 2.4vw;
 }
 .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li {
   display: flex;
   align-items: flex-start;
   padding: 0;
-  gap: 8px;
+  gap: 0.4vw;
 }
 .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit {
-  font-size: 22px;
+  font-size: 2.2rem;
 }
 .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit i {
   margin-right: 12px;
@@ -732,41 +733,44 @@ header .toggle-btn {
 }
 .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit p {
   display: inline-block;
-  font-size: 14px;
+  font-size: 1.4rem;
 }
 .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li p {
-  margin-left: 30px;
+  margin-left: 1.5vw;
 }
 .project .section-inner .modalback .modalScreen .modalScreenInner .modalCloseBtn {
   position: absolute;
   display: inline-block;
-  right: 20px;
-  top: 10px;
+  right: 1vw;
+  top: 0.5vw;
   text-align: center;
   cursor: pointer;
 }
 .project .section-inner .modalback .modalScreen .modalScreenInner .modalCloseBtn i {
   font-family: "FontAwesome";
   content: "\f00d";
-  font-size: 48px;
+  font-size: 4.8rem;
   color: #3f51b5;
 }
 .project .section-inner .modalback .modalScreen .modalScreenInner .viewMore {
   display: inline-block;
   position: absolute;
-  right: 20px;
-  bottom: 20px;
+  right: 1vw;
+  bottom: 1vw;
   text-align: center;
-  line-height: 34px;
-  height: 42px;
-  width: 140px;
-  padding: 5px 10px;
+  line-height: 2.3vw;
+  height: 2.4vw;
+  width: 6.4vw;
+  min-width: 68px;
+  min-height: 25px;
+  padding: 0.2vw 0.5vw;
   background: #3f51b5;
-  border-radius: 24px;
+  border-radius: 28px;
   color: #fff;
 }
 .project .section-inner ul {
   gap: 2%;
+  min-width: 980px;
 }
 .project .section-inner ul .modalList {
   width: 40%;
@@ -1058,13 +1062,262 @@ header .toggle-btn {
 }
 
 @media (max-width: 1440px) {
+  html {
+    font-size: 60%;
+  }
   header {
     padding: 0 1.4vw;
   }
+  .home .container .title {
+    min-width: 500px;
+  }
   .home .container .title p {
+    width: 80%;
     font-size: 1.8rem;
   }
   .home .container .title .section-inner li {
     font-size: 1.4rem;
+    min-width: 200px;
+    min-height: 0;
+  }
+  .home .container .title .section-inner li .back p {
+    line-height: 38px;
+  }
+  .home .container .profile {
+    width: 40vw;
+    height: 52vw;
+    padding: 0 5vw;
+  }
+  .skill .section-tit .ani-dew {
+    width: 3.2vw;
+    height: 3.2vw;
+    bottom: -4.4vw;
+  }
+  .skill .section-inner {
+    margin: 0;
+  }
+  .skill .section-inner ul li {
+    padding: 0;
+  }
+  .skill .section-inner ul li .skill-content .skill-box {
+    width: 36vw;
+    height: 4vw;
+    gap: 1vw;
+  }
+  .skill .section-inner ul li .skill-content .skill-box h2 {
+    font-size: 2rem;
+  }
+  .skill .section-inner ul li .skill-content .skill-desc {
+    width: 36vw;
+  }
+  .skill .section-inner ul li .skill-content .skill-desc.active {
+    height: 10vw;
+    padding: 2vw;
+  }
+  .skill .section-inner ul li .skill-content .skill-desc::before {
+    left: 50%;
+    transform: translateX(-50%) rotate(45deg);
+  }
+  .skill .section-inner ul li img {
+    width: 2.8vw;
+    height: 2.8vw;
+  }
+  .project .section-inner .modalback .modalScreen .modalScreenInner .viewMore span {
+    display: none;
+  }
+}
+@media (max-width: 1024px) {
+  html {
+    font-size: 58%;
+  }
+  header {
+    padding: 0 2vw;
+  }
+  .section {
+    align-items: center;
+  }
+  .section-tit {
+    height: 60px;
+  }
+  .home {
+    align-items: normal;
+  }
+  .home .container {
+    padding-top: 50px;
+    padding-right: 0;
+  }
+  .home .container .title {
+    min-width: 0;
+    width: 50vw;
+    height: 60%;
+  }
+  .home .container .title .hiseul {
+    text-align: center;
+  }
+  .home .container .title .hiseul span {
+    font-size: 5.4rem;
+  }
+  .home .container .title p {
+    width: 84%;
+    font-size: 1.8rem;
+    line-height: 2.6rem;
+  }
+  .home .container .title p .point {
+    font-size: 2rem;
+  }
+  .home .container .title .section-inner {
+    margin: 0;
+    margin-top: 1vw;
+    padding: 0;
+    height: 100%;
+  }
+  .home .container .title .section-inner li {
+    gap: 1vw;
+    width: 80%;
+    height: 25%;
+  }
+  .home .container .title .section-inner li .card-horizontal .front,
+  .home .container .title .section-inner li .card-horizontal .back,
+  .home .container .title .section-inner li .card-vertical .front,
+  .home .container .title .section-inner li .card-vertical .back {
+    flex-direction: row;
+    gap: 1vw;
+    padding: 2vw;
+  }
+  .home .container .title .section-inner li .card-horizontal .front .dew img,
+  .home .container .title .section-inner li .card-horizontal .back .dew img,
+  .home .container .title .section-inner li .card-vertical .front .dew img,
+  .home .container .title .section-inner li .card-vertical .back .dew img {
+    width: 80%;
+  }
+  .home .container .title .section-inner li .card-horizontal .front .desc,
+  .home .container .title .section-inner li .card-horizontal .back .desc,
+  .home .container .title .section-inner li .card-vertical .front .desc,
+  .home .container .title .section-inner li .card-vertical .back .desc {
+    flex-grow: 3;
+    text-align: left;
+  }
+  .home .container .title .section-inner li .card-horizontal .back p,
+  .home .container .title .section-inner li .card-vertical .back p {
+    width: 100%;
+    line-height: 2rem;
+  }
+  .home .container .title .section-inner li:hover .card-horizontal {
+    transform: rotateX(180deg);
+  }
+  .home .container .title .section-inner li .hori {
+    transform: rotateX(180deg);
+  }
+  .home .container .profile {
+    width: 50vw;
+    height: 80%;
+    margin: 0 20px;
+  }
+  .skill .section-tit .ani-dew {
+    display: none;
+  }
+  .skill .section-inner ul {
+    gap: 2vw;
+  }
+  .skill .section-inner ul li .skill-content {
+    margin: 0;
+  }
+  .skill .section-inner ul li .skill-content .skill-box {
+    width: 40vw;
+  }
+  .skill .section-inner ul li .skill-content .skill-desc {
+    width: 40vw;
+    height: 12vw;
+    padding: 2vw;
+    opacity: 1;
+    visibility: visible;
+  }
+  .project {
+    height: auto;
+  }
+  .project .section-inner .modalback {
+    top: 2vw;
+  }
+  .project .section-inner .modalback .modalScreen {
+    width: 90%;
+  }
+  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 42%;
+    height: 100%;
+    background: #fff;
+    padding: 1vw 0 0 1vw;
+  }
+  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text ul {
+    width: 90%;
+    height: 100%;
+    display: flex;
+    gap: 2vw;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0 1vw 2.4vw;
+  }
+  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li {
+    display: flex;
+    align-items: flex-start;
+    padding: 0;
+    gap: 0.4vw;
+  }
+  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit {
+    font-size: 2.2rem;
+  }
+  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit i {
+    margin-right: 12px;
+    color: #3f51b5;
+  }
+  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit p {
+    display: inline-block;
+    font-size: 1.4rem;
+  }
+  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li p {
+    margin-left: 1.5vw;
+  }
+  .project .section-inner .modalback .modalScreen .modalScreenInner .modalCloseBtn {
+    position: absolute;
+    display: inline-block;
+    right: 1vw;
+    top: 0.5vw;
+    text-align: center;
+    cursor: pointer;
+  }
+  .project .section-inner .modalback .modalScreen .modalScreenInner .modalCloseBtn i {
+    font-family: "FontAwesome";
+    content: "\f00d";
+    font-size: 4.8rem;
+    color: #3f51b5;
+  }
+  .project .section-inner .modalback .modalScreen .modalScreenInner .viewMore {
+    display: inline-block;
+    position: absolute;
+    right: 1vw;
+    bottom: 1vw;
+    text-align: center;
+    line-height: 2.4rem;
+    padding: 0.2vw 0.5vw;
+    background: #3f51b5;
+    border-radius: 2.4rem;
+    color: #fff;
+  }
+  .project .section-inner ul {
+    min-width: 0;
+  }
+  .project .section-inner ul .modalList {
+    width: 100%;
+    height: auto;
+    min-width: 0;
+    padding-top: 30px;
+    margin-bottom: 50px;
+  }
+  .project .section-inner ul .modalList .dew {
+    width: 4.8rem;
+    height: 4.8rem;
   }
 }/*# sourceMappingURL=style.css.map */
