--- a/profile/style.css
+++ b/profile/style.css
@@ -128,7 +128,7 @@ header .toggle-btn {
 
 .color-select-box {
   position: fixed;
-  left: -8vw;
+  left: -120px;
   bottom: 4.2vw;
   z-index: 999;
   display: flex;
@@ -138,17 +138,18 @@ header .toggle-btn {
   left: 0;
 }
 .color-select-box .colorBox {
-  width: 8vw;
-  height: 8vw;
-  padding: 1vw;
+  width: 120px;
+  height: 120px;
   background: #fff;
   display: flex;
   flex-wrap: wrap;
-  gap: 1vw;
+  justify-content: center;
+  align-items: center;
 }
 .color-select-box .colorBox .select-color {
-  width: 2.4vw;
-  height: 2.4vw;
+  width: 44px;
+  height: 44px;
+  margin: 0 6px;
   cursor: pointer;
 }
 .color-select-box .colorBox .select-color:nth-child(1) {
@@ -181,8 +182,12 @@ header .toggle-btn {
   opacity: 0.9;
   color: #fff;
   font-size: 1.8rem;
+  transition: all 0.2s;
   cursor: pointer;
   z-index: 9999;
+}
+.gotoTop:hover {
+  opacity: 1;
 }
 
 .color-setting {
@@ -434,27 +439,26 @@ header .toggle-btn {
 .home .container .profile {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   width: 30vw;
   height: 40vw;
   padding: 0.9vw;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  background: #fff;
+  background: #3f51b5;
   overflow: hidden;
   position: relative;
-  border: 4px solid #222;
 }
 .home .container .profile .main-profile {
-  width: 90%;
+  width: 94%;
   height: 90%;
   -o-object-fit: cover;
      object-fit: cover;
   position: absolute;
   left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  top: 2%;
+  transform: translateX(-50%);
   z-index: 0;
 }
 .home .container .profile .images {
@@ -508,8 +512,9 @@ header .toggle-btn {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  height: 5%;
+  font-size: 16px;
+  height: 8%;
+  color: #fff;
 }
 
 .skill .section-tit {
@@ -647,7 +652,7 @@ header .toggle-btn {
   display: none;
   position: fixed;
   bottom: 0;
-  top: 0;
+  top: 2vw;
   left: 0;
   right: 0;
   justify-content: center;
@@ -840,18 +845,25 @@ header .toggle-btn {
 .example {
   padding-bottom: 20px;
   height: auto;
+  overflow: hidden;
 }
 .example .section-inner {
-  margin-top: 0;
+  height: auto;
   display: flex;
   justify-content: center;
-  height: auto;
+  align-items: center;
+  margin-top: 0;
 }
 .example .section-inner .inner-wrap {
   width: 78%;
   height: auto;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  min-width: 1100px;
+}
+.example .section-inner .inner-wrap .slide-button {
+  display: none;
 }
 .example .section-inner .inner-wrap .ex-menu {
   display: flex;
@@ -889,7 +901,10 @@ header .toggle-btn {
 .example .section-inner .inner-wrap .ex-box {
   width: 100%;
   height: auto;
+  min-height: 476px;
   margin-top: 24px;
+  border-radius: 20px;
+  background: #dddddd;
 }
 .example .section-inner .inner-wrap .ex-box .modal-full {
   display: none;
@@ -898,15 +913,19 @@ header .toggle-btn {
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.5);
   z-index: 9999;
 }
 .example .section-inner .inner-wrap .ex-box .modal-full #my-modal {
-  width: 100%;
-  height: 100%;
+  width: 92%;
+  height: 92%;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 .example .section-inner .inner-wrap .ex-box .modal-full #my-modal #chat-iframe {
   width: 100%;
@@ -915,37 +934,34 @@ header .toggle-btn {
   border-radius: 5px;
   position: relative;
 }
-.example .section-inner .inner-wrap .ex-box .modal-full #my-modal .modal-close-btn {
+.example .section-inner .inner-wrap .ex-box .modal-full .modal-close-btn {
   width: 32px;
   height: 32px;
   text-align: center;
   position: absolute;
-  right: 20px;
-  top: 20px;
+  right: 12px;
+  top: 14px;
   cursor: pointer;
 }
-.example .section-inner .inner-wrap .ex-box .modal-full #my-modal .modal-close-btn i {
-  color: ddd;
+.example .section-inner .inner-wrap .ex-box .modal-full .modal-close-btn i {
+  color: #fff;
   font-size: 18px;
 }
 .example .section-inner .inner-wrap .ex-box .ex-box-wrap {
   padding: 20px;
-  padding-bottom: 40px;
   width: 100%;
   height: auto;
   display: none;
   justify-content: center;
-  background: #dddddd;
 }
 .example .section-inner .inner-wrap .ex-box .ex-box-wrap.active {
   display: flex;
 }
 .example .section-inner .inner-wrap .ex-box .ex-box-wrap li {
-  flex-grow: 1;
   height: auto;
   min-height: 420px;
-  min-width: 390px;
-  max-width: 600px;
+  width: 30vw;
+  min-width: 480px;
   margin: 20px;
   overflow: hidden;
   position: relative;
@@ -1066,7 +1082,7 @@ header .toggle-btn {
     font-size: 60%;
   }
   header {
-    padding: 0 1.4vw;
+    padding: 0 2vw;
   }
   .home .container .title {
     min-width: 500px;
@@ -1085,8 +1101,12 @@ header .toggle-btn {
   }
   .home .container .profile {
     width: 40vw;
-    height: 52vw;
+    height: 74vh;
     padding: 0 5vw;
+  }
+  .home .container .profile .main-profile {
+    -o-object-position: 20% 32%;
+       object-position: 20% 32%;
   }
   .skill .section-tit .ani-dew {
     width: 3.2vw;
@@ -1132,6 +1152,13 @@ header .toggle-btn {
   }
   header {
     padding: 0 2vw;
+  }
+  header .gnb {
+    gap: 2.4rem;
+  }
+  header .gnb li {
+    font-size: 2.4rem;
+    font-weight: 400;
   }
   .section {
     align-items: center;
@@ -1210,7 +1237,7 @@ header .toggle-btn {
   }
   .home .container .profile {
     width: 50vw;
-    height: 80%;
+    height: 62vw;
     margin: 0 20px;
   }
   .skill .section-tit .ani-dew {
@@ -1235,76 +1262,8 @@ header .toggle-btn {
   .project {
     height: auto;
   }
-  .project .section-inner .modalback {
-    top: 2vw;
-  }
   .project .section-inner .modalback .modalScreen {
     width: 90%;
-  }
-  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 42%;
-    height: 100%;
-    background: #fff;
-    padding: 1vw 0 0 1vw;
-  }
-  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text ul {
-    width: 90%;
-    height: 100%;
-    display: flex;
-    gap: 2vw;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    padding: 0 1vw 2.4vw;
-  }
-  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li {
-    display: flex;
-    align-items: flex-start;
-    padding: 0;
-    gap: 0.4vw;
-  }
-  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit {
-    font-size: 2.2rem;
-  }
-  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit i {
-    margin-right: 12px;
-    color: #3f51b5;
-  }
-  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit p {
-    display: inline-block;
-    font-size: 1.4rem;
-  }
-  .project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li p {
-    margin-left: 1.5vw;
-  }
-  .project .section-inner .modalback .modalScreen .modalScreenInner .modalCloseBtn {
-    position: absolute;
-    display: inline-block;
-    right: 1vw;
-    top: 0.5vw;
-    text-align: center;
-    cursor: pointer;
-  }
-  .project .section-inner .modalback .modalScreen .modalScreenInner .modalCloseBtn i {
-    font-family: "FontAwesome";
-    content: "\f00d";
-    font-size: 4.8rem;
-    color: #3f51b5;
-  }
-  .project .section-inner .modalback .modalScreen .modalScreenInner .viewMore {
-    display: inline-block;
-    position: absolute;
-    right: 1vw;
-    bottom: 1vw;
-    text-align: center;
-    line-height: 2.4rem;
-    padding: 0.2vw 0.5vw;
-    background: #3f51b5;
-    border-radius: 2.4rem;
-    color: #fff;
   }
   .project .section-inner ul {
     min-width: 0;
@@ -1319,5 +1278,59 @@ header .toggle-btn {
   .project .section-inner ul .modalList .dew {
     width: 4.8rem;
     height: 4.8rem;
+  }
+  .example .section-inner .inner-wrap {
+    min-width: 0;
+    width: 100%;
+  }
+  .example .section-inner .inner-wrap .ex-menu {
+    justify-content: center;
+  }
+  .example .section-inner .inner-wrap .ex-box {
+    display: flex;
+    justify-content: flex-start;
+    overflow: hidden;
+    height: 50vh;
+    min-width: 0;
+    position: relative;
+  }
+  .example .section-inner .inner-wrap .ex-box .slide-button {
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+  .example .section-inner .inner-wrap .ex-box .slide-button span {
+    position: absolute;
+    top: 50%;
+    padding: 0 0.6vw;
+    transform: translateY(-50%);
+    cursor: pointer;
+    z-index: 50;
+  }
+  .example .section-inner .inner-wrap .ex-box .slide-button span i {
+    font-size: 36px;
+  }
+  .example .section-inner .inner-wrap .ex-box .slide-button span:last-child {
+    right: 0;
+  }
+  .example .section-inner .inner-wrap .ex-box .ex-box-wrap {
+    padding: 1.8vw;
+    padding-bottom: 2vw;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    width: 5000px;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border: 1px solid red;
+  }
+  .example .section-inner .inner-wrap .ex-box .ex-box-wrap li {
+    height: 420px;
+    width: 80vw;
+    min-height: 0;
+    min-width: 0;
+    max-width: 1024px;
+    margin-left: 2vw;
   }
 }/*# sourceMappingURL=style.css.map */
