--- a/profile/style.scss
+++ b/profile/style.scss
@@ -116,7 +116,7 @@ header {
 }
 .color-select-box {
   position: fixed;
-  left: -8vw;
+  left: -120px;
   bottom: 4.2vw;
   z-index: 999;
   display: flex;
@@ -125,16 +125,17 @@ header {
     left: 0;
   }
   .colorBox {
-    width: 8vw;
-    height: 8vw;
-    padding: 1vw;
+    width: 120px;
+    height: 120px;
     background: #fff;
     display: flex;
     flex-wrap: wrap;
-    gap: 1vw;
+    justify-content: center;
+    align-items: center;
     .select-color {
-      width: 2.4vw;
-      height: 2.4vw;
+      width: 44px;
+      height: 44px;
+      margin: 0 6px;
       cursor: pointer;
       &:nth-child(1) {
         background: map-get($font-color, primary);
@@ -168,8 +169,12 @@ header {
   opacity: 0.9;
   color: #fff;
   font-size: 1.8rem;
+  transition: all 0.2s;
   cursor: pointer;
   z-index: 9999;
+  &:hover {
+    opacity: 1;
+  }
 }
 .color-setting {
   display: flex;
@@ -420,26 +425,25 @@ header {
     .profile {
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       width: 30vw;
       height: 40vw;
       padding: 0.9vw;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
-      background: #fff;
+      background: map-get($font-color, primary);
       overflow: hidden;
       position: relative;
-      border: 4px solid #222;
 
       .main-profile {
-        width: 90%;
+        width: 94%;
         height: 90%;
         object-fit: cover;
         position: absolute;
         left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
+        top: 2%;
+        transform: translateX(-50%);
 
         z-index: 0;
       }
@@ -494,8 +498,9 @@ header {
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 14px;
-        height: 5%;
+        font-size: 16px;
+        height: 8%;
+        color: #fff;
       }
     }
   }
@@ -649,7 +654,7 @@ header {
       display: none;
       position: fixed;
       bottom: 0;
-      top: 0;
+      top: 2vw;
       left: 0;
       right: 0;
       justify-content: center;
@@ -846,23 +851,29 @@ header {
 .example {
   padding-bottom: 20px;
   height: auto;
+  overflow: hidden;
   .section-inner {
-    margin-top: 0;
+    height: auto;
     display: flex;
     justify-content: center;
-    height: auto;
+    align-items: center;
+    margin-top: 0;
     .inner-wrap {
       width: 78%;
       height: auto;
       display: flex;
       flex-direction: column;
+      align-items: center;
+      min-width: 1100px;
+      .slide-button {
+        display: none;
+      }
       .ex-menu {
         display: flex;
         height: auto;
         justify-content: flex-start;
         align-items: flex-start;
         position: relative;
-
         li {
           text-align: center;
           height: 42px;
@@ -894,7 +905,10 @@ header {
       .ex-box {
         width: 100%;
         height: auto;
+        min-height: 476px;
         margin-top: 24px;
+        border-radius: 20px;
+        background: map-get($font-color, primary-light);
         .modal-full {
           display: none;
           position: fixed;
@@ -902,15 +916,18 @@ header {
           top: 0;
           width: 100%;
           height: 100%;
-          background: rgba(0, 0, 0, 0.3);
+          background: rgba(0, 0, 0, 0.5);
           z-index: 9999;
           #my-modal {
-            width: 100%;
-            height: 100%;
+            width: 92%;
+            height: 92%;
             display: flex;
             justify-content: center;
             align-items: center;
-
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
             #chat-iframe {
               width: 100%;
               height: 100%;
@@ -918,39 +935,38 @@ header {
               border-radius: 5px;
               position: relative;
             }
-            .modal-close-btn {
-              width: 32px;
-              height: 32px;
-              text-align: center;
-              position: absolute;
-              right: 20px;
-              top: 20px;
-              cursor: pointer;
-              i {
-                color: ddd;
-                font-size: 18px;
-              }
+          }
+          .modal-close-btn {
+            width: 32px;
+            height: 32px;
+            text-align: center;
+            position: absolute;
+            right: 12px;
+            top: 14px;
+
+            cursor: pointer;
+
+            i {
+              color: #fff;
+              font-size: 18px;
             }
           }
         }
         .ex-box-wrap {
           padding: 20px;
-          padding-bottom: 40px;
           width: 100%;
           height: auto;
           display: none;
           justify-content: center;
-          background: map-get($font-color, primary-light);
           &.active {
             display: flex;
           }
 
           li {
-            flex-grow: 1;
             height: auto;
             min-height: 420px;
-            min-width: 390px;
-            max-width: 600px;
+            width: 30vw;
+            min-width: 480px;
             margin: 20px;
             overflow: hidden;
             position: relative;
@@ -1073,7 +1089,7 @@ header {
     font-size: 60%;
   }
   header {
-    padding: 0 1.4vw;
+    padding: 0 2vw;
   }
   //home
   .home {
@@ -1099,8 +1115,11 @@ header {
       }
       .profile {
         width: 40vw;
-        height: 52vw;
+        height: 74vh;
         padding: 0 5vw;
+        .main-profile {
+          object-position: 20% 32%;
+        }
       }
     }
   }
@@ -1171,6 +1190,13 @@ header {
   }
   header {
     padding: 0 2vw;
+    .gnb {
+      gap: 2.4rem;
+      li {
+        font-size: 2.4rem;
+        font-weight: 400;
+      }
+    }
   }
   .section {
     align-items: center;
@@ -1247,7 +1273,7 @@ header {
       }
       .profile {
         width: 50vw;
-        height: 80%;
+        height: 62vw;
         margin: 0 20px;
       }
     }
@@ -1284,77 +1310,8 @@ header {
     height: auto;
     .section-inner {
       .modalback {
-        top: 2vw;
         .modalScreen {
           width: 90%;
-          .modalScreenInner {
-            .project-text {
-              display: flex;
-              flex-direction: column;
-              justify-content: center;
-              width: 42%;
-              height: 100%;
-              background: #fff;
-              padding: 1vw 0 0 1vw;
-              ul {
-                width: 90%;
-                height: 100%;
-                display: flex;
-                gap: 2vw;
-                flex-direction: column;
-                align-items: flex-start;
-                justify-content: center;
-                padding: 0 1vw 2.4vw;
-              }
-              .clone-desc li {
-                display: flex;
-                align-items: flex-start;
-                padding: 0;
-                gap: 0.4vw;
-                .tit {
-                  font-size: 2.2rem;
-
-                  i {
-                    margin-right: 12px;
-                    color: map-get($font-color, primary);
-                  }
-                  p {
-                    display: inline-block;
-                    font-size: 1.4rem;
-                  }
-                }
-                p {
-                  margin-left: 1.5vw;
-                }
-              }
-            }
-            .modalCloseBtn {
-              position: absolute;
-              display: inline-block;
-              right: 1vw;
-              top: 0.5vw;
-              text-align: center;
-              cursor: pointer;
-              i {
-                font-family: "FontAwesome";
-                content: "\f00d";
-                font-size: 4.8rem;
-                color: map-get($font-color, primary);
-              }
-            }
-            .viewMore {
-              display: inline-block;
-              position: absolute;
-              right: 1vw;
-              bottom: 1vw;
-              text-align: center;
-              line-height: 2.4rem;
-              padding: 0.2vw 0.5vw;
-              background: map-get($font-color, primary);
-              border-radius: 2.4rem;
-              color: #fff;
-            }
-          }
         }
       }
 
@@ -1369,6 +1326,67 @@ header {
           .dew {
             width: 4.8rem;
             height: 4.8rem;
+          }
+        }
+      }
+    }
+  }
+  .example {
+    .section-inner {
+      .inner-wrap {
+        min-width: 0;
+        width: 100%;
+
+        .ex-menu {
+          justify-content: center;
+        }
+        .ex-box {
+          display: flex;
+          justify-content: flex-start;
+          overflow: hidden;
+          height: 50vh;
+          min-width: 0;
+          position: relative;
+          .slide-button {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            span {
+              position: absolute;
+              top: 50%;
+              padding: 0 0.6vw;
+
+              transform: translateY(-50%);
+              cursor: pointer;
+              z-index: 50;
+              i {
+                font-size: 36px;
+              }
+              &:last-child {
+                right: 0;
+              }
+            }
+          }
+          .ex-box-wrap {
+            padding: 1.8vw;
+            padding-bottom: 2vw;
+            justify-content: flex-start;
+            flex-wrap: nowrap;
+            width: 5000px;
+            height: 100%;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            border: 1px solid red;
+            // left: -782px;
+            li {
+              height: 420px;
+              width: 80vw;
+              min-height: 0;
+              min-width: 0;
+              max-width: 1024px;
+              margin-left: 2vw;
+            }
           }
         }
       }
