--- a/profile/variable.scss
+++ b/profile/variable.scss
@@ -14,7 +14,7 @@ $font-family: (
   sub_en: "Orbit",
 );
 $font-color: (
-  primary: #3f51b5,
+  primary: #337ab7,
   primary-dark: #1d2833,
   primary-light: #dddddd,
   bg: #f2f2f2,
