--- a/profile/style.scss
+++ b/profile/style.scss
@@ -26,24 +26,24 @@ header {
     align-items: center;
     justify-content: center;
     .logo {
-      font-size: 4.6rem;
+      font-size: 4rem;
       font-family: map-get($font-family, main_en);
-      font-weight: bold;
-      letter-spacing: 0.15rem;
+      font-weight: 500;
+      letter-spacing: -0.15rem;
       color: #fff;
       transition: all 0.3s;
       &:hover {
+        -webkit-text-stroke: 0.1px #fff;
         background: linear-gradient(
           -45deg,
-          #43c2cd 25%,
-          #e75cd0 25%,
-          #e75cd0 50%,
-          #43c2cd 50%,
-          #43c2cd 75%,
-          #e75cd0 75%,
-          #e75cd0
+          #337ab7 25%,
+          #be6464 25%,
+          #be6464 50%,
+          #337ab7 50%,
+          #337ab7 75%,
+          #be6464 75%,
+          #be6464 100%
         );
-        -webkit-text-stroke: 1px #222;
         background-clip: text;
         color: transparent;
         background-size: 2rem 2rem;
@@ -83,22 +83,30 @@ header {
   .gnb {
     display: flex;
     gap: 5rem;
-    overflow: hidden;
     height: auto;
     padding: 0 2rem;
     align-items: center;
     li {
       font-size: 2.6rem;
       font-family: map-get($font-family, main_en);
-      font-weight: 500;
+      font-weight: 100;
       cursor: pointer;
-      transition: all 0.3s;
-      &:hover {
-        font-size: 3.8rem;
-        font-weight: 600;
-        -webkit-text-stroke: 1px #222;
-        text-shadow: 5px 5px 0px #43c2cd, 10px 10px 0px #e75cd0,
-          15px 15px 0px #5f4997;
+      position: relative;
+      &::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        bottom: -0.6rem;
+        width: 0;
+        height: 4px;
+        background: #fff;
+        -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
+        -webkit-transition: width 0.15s ease-in-out;
+        transition: width 0.15s ease-in-out;
+      }
+      &:hover::after {
+        width: 120%;
       }
     }
   }
@@ -118,7 +126,7 @@ header {
   position: fixed;
   left: -120px;
   bottom: 4.2vw;
-  z-index: 999;
+  z-index: 9999;
   display: flex;
   transition: all 0.3s;
   &.active {
@@ -141,13 +149,13 @@ header {
         background: map-get($font-color, primary);
       }
       &:nth-child(2) {
-        background: #00a73e;
+        background: #8dc572;
       }
       &:nth-child(3) {
-        background: #ff9801;
+        background: #f0ad4e;
       }
       &:nth-child(4) {
-        background: #ea1e63;
+        background: #be6464;
       }
     }
   }
@@ -171,7 +179,7 @@ header {
   font-size: 1.8rem;
   transition: all 0.2s;
   cursor: pointer;
-  z-index: 9999;
+  z-index: 999;
   &:hover {
     opacity: 1;
   }
@@ -315,10 +323,11 @@ header {
       .hiseul {
         text-align: center;
         span {
-          font-size: 7rem;
+          font-size: 8rem;
           font-family: map-get($font-family, main_en);
           font-weight: 900;
-          -webkit-text-stroke: 1px #222;
+          letter-spacing: -0.2rem;
+          -webkit-text-stroke: 1px #777;
           color: #fff;
           .blue {
             color: map-get($font-color, primary);
@@ -907,8 +916,10 @@ header {
         height: auto;
         min-height: 476px;
         margin-top: 24px;
+        border: 0.2vw solid map-get($font-color, primary);
         border-radius: 20px;
         background: map-get($font-color, primary-light);
+
         .modal-full {
           display: none;
           position: fixed;
@@ -918,7 +929,7 @@ header {
           height: 100%;
           background: rgba(0, 0, 0, 0.5);
           z-index: 9999;
-          #my-modal {
+          #ex-modal {
             width: 92%;
             height: 92%;
             display: flex;
@@ -980,7 +991,7 @@ header {
               height: 100%;
               background: map-get($font-color, primary);
               opacity: 0;
-              transition: all 0.3s ease;
+              transition: all 0.5s ease;
             }
             &:hover div {
               display: flex;
@@ -988,11 +999,9 @@ header {
               align-items: center;
               top: 0;
               left: 0;
-              opacity: 0.9;
-              text-align: left;
-              padding: 0 50px;
+              opacity: 0.8;
               p {
-                width: 340px;
+                width: 56%;
                 color: #fff;
               }
             }
@@ -1062,6 +1071,7 @@ header {
           display: flex;
           justify-content: center;
           align-items: center;
+          cursor: pointer;
           img {
             width: 80%;
             padding: 5px;
@@ -1093,37 +1103,60 @@ header {
   }
   //home
   .home {
+    margin-top: 2vw;
     .container {
       .title {
-        min-width: 500px;
+        min-width: 300px;
+        .hiseul {
+          span {
+            font-size: 4.6rem;
+          }
+        }
         p {
           width: 80%;
           font-size: 1.8rem;
         }
         .section-inner {
           li {
-            font-size: 1.4rem;
-            min-width: 200px;
+            width: 16vw;
+            height: 10.4vw;
+            font-size: 1.2rem;
+            min-width: 180px;
             min-height: 0;
-            .back {
-              p {
-                line-height: 38px;
+            .card-horizontal,
+            .card-vertical {
+              .back {
+                p {
+                  font-size: 1.4rem;
+                  line-height: 2rem;
+                }
+              }
+            }
+            &:nth-child(3) {
+              .card-horizontal,
+              .card-vertical {
+                .front {
+                  .desc {
+                    width: 12vw;
+                  }
+                }
               }
             }
           }
         }
       }
       .profile {
-        width: 40vw;
+        width: 32vw;
         height: 74vh;
         padding: 0 5vw;
         .main-profile {
-          object-position: 20% 32%;
+          object-position: 20% 30%;
         }
       }
     }
   }
   .skill {
+    height: auto;
     .section-tit {
       .ani-dew {
         width: 3.2vw;
@@ -1133,14 +1166,20 @@ header {
     }
     .section-inner {
       margin: 0;
+      height: auto;
       ul {
+        margin-top: 2vw;
+        gap: 2.6vw;
         li {
           padding: 0;
+          margin: 0;
           .skill-content {
+            height: auto;
+            margin: 0;
             .skill-box {
               width: 36vw;
-              height: 4vw;
-              gap: 1vw;
+              height: auto;
+
               h2 {
                 font-size: 2rem;
               }
@@ -1191,10 +1230,136 @@ header {
   header {
     padding: 0 2vw;
     .gnb {
-      gap: 2.4rem;
+      position: absolute;
+      top: 0;
+      right: 0;
+      display: none;
+      flex-direction: column;
+      align-items: flex-end;
+      gap: 0;
+      background: rgba(0, 0, 0, 0.5);
+      width: 100%;
+      height: 100vh;
+      padding-top: 60px;
+      z-index: 9998;
+      transition: all 0.5s;
+      &::before {
+        content: "";
+        position: absolute;
+        right: -100%;
+        top: 0;
+        width: 400px;
+        height: 100%;
+        background: #fff;
+        visibility: hidden;
+        transition: all 0.3s;
+      }
+      &.active {
+        display: flex;
+      }
+      &.active::before {
+        right: 0;
+        visibility: visible;
+      }
+
       li {
-        font-size: 2.4rem;
+        display: block;
+        font-size: 4rem;
         font-weight: 400;
+        width: 320px;
+        height: 50px;
+        color: map-get($font-color, primary);
+        margin: 10px 20px 10px 0;
+        opacity: 0;
+        position: relative;
+
+        &::before {
+          content: "";
+          opacity: 0;
+          position: absolute;
+          width: 42px;
+          height: 42px;
+          border-radius: 100%;
+          background: rgba(34, 34, 34, 0.2);
+          bottom: 4px;
+          left: -12px;
+          transition: all 0.3s;
+        }
+        &::after {
+          content: "";
+          opacity: 0;
+          border: 2px solid #222;
+          border-left: none;
+          border-bottom: none;
+          width: 12px;
+          height: 12px;
+          left: 80%;
+          top: 50%;
+          bottom: 0;
+          transform: translateY(-50%) rotate(45deg);
+          transition: all 0.3s;
+          background: none;
+        }
+        &:hover::before {
+          opacity: 1;
+        }
+        &:hover::after {
+          opacity: 1;
+          width: 12px;
+        }
+        &.active {
+          opacity: 1;
+        }
+      }
+    }
+    .toggle-btn {
+      display: flex;
+      width: 30px;
+      height: 26px;
+      position: relative;
+      cursor: pointer;
+      z-index: 9999;
+
+      span {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        display: flex;
+        flex-direction: column;
+        background: #fff;
+        transition: all 0.3s;
+
+        &:nth-child(2) {
+          top: 50%;
+          transform: translateY(-50%);
+        }
+        &:last-child {
+          bottom: 0;
+        }
+      }
+      &.active {
+        top: -12px;
+        left: -12px;
+        span {
+          height: 2px;
+          background: rgba(34, 34, 34, 0.5);
+          border-radius: 4px;
+          &:first-child {
+            top: 50%;
+            transform: translateY(-50%) rotate(45deg);
+          }
+          &:nth-child(2) {
+            opacity: 0;
+          }
+          &:last-child {
+            top: 50%;
+            transform: translateY(-50%) rotate(-45deg);
+          }
+        }
+      }
+      &:hover span {
+        background: #222;
       }
     }
   }
@@ -1336,7 +1501,6 @@ header {
       .inner-wrap {
         min-width: 0;
         width: 100%;
-
         .ex-menu {
           justify-content: center;
         }
@@ -1347,20 +1511,35 @@ header {
           height: 50vh;
           min-width: 0;
           position: relative;
+          border: 0.4vw solid map-get($font-color, primary);
+
           .slide-button {
             display: flex;
             width: 100%;
             height: 100%;
-            span {
+            button {
               position: absolute;
               top: 50%;
-              padding: 0 0.6vw;
-
+              padding: 0 1.6vw;
               transform: translateY(-50%);
+              border: none;
+              background: none;
+              opacity: 0.8;
+              transition: all 0.2s;
               cursor: pointer;
               z-index: 50;
               i {
                 font-size: 36px;
+              }
+              &.active {
+                opacity: 0.4;
+                cursor: initial;
+                &:hover {
+                  opacity: 0.4;
+                }
+              }
+              &:hover {
+                opacity: 1;
               }
               &:last-child {
                 right: 0;
@@ -1368,24 +1547,23 @@ header {
             }
           }
           .ex-box-wrap {
-            padding: 1.8vw;
-            padding-bottom: 2vw;
+            padding-left: 4.6vw;
             justify-content: flex-start;
             flex-wrap: nowrap;
-            width: 5000px;
+            gap: 5vw;
+            width: auto;
             height: 100%;
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            border: 1px solid red;
-            // left: -782px;
+
             li {
+              margin: 4.8vw 0;
               height: 420px;
               width: 80vw;
               min-height: 0;
               min-width: 0;
               max-width: 1024px;
-              margin-left: 2vw;
             }
           }
         }
